--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "author": "fmbv",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.5.7",
     "exceljs": "^0.8.1",
     "express": "^4.16.2",
+    "express-method-override": "0.0.3",
     "json2xls": "^0.1.2",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.4",
-    "oracledb": "^1.13.1"
+    "oracledb": "^1.13.1",
+    "serve-favicon": "^2.4.5"
   }
 }
