--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conn_giga",
   "version": "0.0.1",
   "description": "conexion con bd oracle giga",
-  "main": "tdcVivos.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "pm2 start tdcVivos.js -i max",
@@ -19,6 +19,12 @@
     "express": "^4.16.2",
     "json2xls": "^0.1.2",
     "nodemon": "^1.12.4",
-    "oracledb": "^1.13.1"
+    "oracledb": "^1.13.1",
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "express-method-override": "0.0.3",
+    "morgan": "^1.9.0",
+    "responsimple": "^1.0.1",
+    "serve-favicon": "^2.4.5"
   }
 }
