--- a/package.json
+++ b/package.json
@@ -5,26 +5,29 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start tdcVivos.js -i max",
-    "dev": "node tdcVivosgetRows.js --max_old_space_size=8192 --optimize_for_size --stack_size=8192"
+    "start": "pm2 start tdcVivosgetRows.js -i 1",
+    "dev":
+      "nodemon tdcVivosgetRows.js --max_old_space_size=8192 --optimize_for_size --stack_size=8192"
   },
-  "keywords": [
-    "oracle",
-    "nodejs"
-  ],
+  "keywords": ["oracle", "nodejs"],
   "author": "fmbv",
   "license": "MIT",
   "dependencies": {
+    "@angular/cli": "^1.7.3",
+    "angular": "^1.6.9",
+    "body-parser": "^1.18.2",
+    "cron": "^1.3.0",
+    "ejs": "^2.5.7",
     "exceljs": "^0.8.1",
     "express": "^4.16.2",
+    "express-method-override": "0.0.3",
     "json2xls": "^0.1.2",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.4",
     "oracledb": "^1.13.1",
-    "body-parser": "^1.18.2",
-    "ejs": "^2.5.7",
-    "express-method-override": "0.0.3",
-    "morgan": "^1.9.0",
     "responsimple": "^1.0.1",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.4.5",
+    "socket.io": "^2.0.4",
+    "socket.mvc": "^0.2.0"
   }
 }
